--- a/src/html/partials/home/index.html
+++ b/src/html/partials/home/index.html
@@ -1,1 +1,29 @@
-<h1 id="for_e2e_test">{{ text }}</h1>
+<!--home view-->
+
+<div class="center">
+
+  <div class="main-menu">
+    <div class="main-menu__item main-menu__item--create" data-ng-click="go('/create-gallery', 'slide-left')">
+      <div class="main-menu__item-inner">
+        <h1 class="main-menu__item-title">Create<span class="main-menu__item-subtitle">a Gallery</span></h1>
+        <span class="main-menu__item-logo icon-add"></span>
+      </div>
+    </div>
+    <div class="main-menu__item main-menu__item--import" data-ng-click="go('/get-gallery', 'slide-left')">
+      <div class="main-menu__item-inner">
+        <h1 class="main-menu__item-title">Import<span class="main-menu__item-subtitle">a Gallery</span></h1>
+        <span class="main-menu__item-logo icon-download"></span>
+      </div>
+    </div>
+    <div class="main-menu__item main-menu__item--select" data-ng-click="go('/select-gallery', 'slide-left')">
+      <div class="main-menu__item-inner">
+        <h1 class="main-menu__item-title">Show<span class="main-menu__item-subtitle">Galleries</span></h1>
+        <span class="main-menu__item-logo icon-select"></span>
+      </div>
+    </div>
+  </div>
+
+
+</div>
+
+
