--- a/src/html/layouts/application.tmpl
+++ b/src/html/layouts/application.tmpl
@@ -33,7 +33,7 @@
   </div>
 
   <div id="container" class="container">
-    <div data-ng-class="{'show-ctrls': showCtrls}" class="page {{ animationClass }} {{ pageClass }}  " ng-view></div>
+    <div data-ng-class="{'show-ctrls': showCtrls}" class="page {{ animationClass }} {{ pageClass }}  " data-ng-view ng-animate-children></div>
   </div>
 
   <script type="text/javascript">
