--- a/src/html/partials/edit-gallery/index.html
+++ b/src/html/partials/edit-gallery/index.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="center">
+<div class="center center--show-top center--show-bottom">
   <div class="center__inner text-center">
     <div class="message2" data-ng-if="showUploadBtn || showUpdateBtn">
       <button data-ng-if="showUpdateBtn" data-ng-click="onUpdateBtnClick()">Apply changes</button>
@@ -37,7 +37,6 @@
 
 
 <div class="bottom">
-  <div class="bottom__background"></div>
   <div class="bottom__inner">
     <ul class="bottom-ctrl">
       <li class="bottom-ctrl__item">
