--- a/src/html/partials/slideshow/index.html
+++ b/src/html/partials/slideshow/index.html
@@ -32,8 +32,7 @@
 
 </div>
 
-<div class="bottom">
-  <div class="bottom__background"></div>
+<div class="bottom bottom--dark">
   <div class="bottom__inner">
     <p>
       <button data-ng-click="startSlideshow()">play</button>
