--- a/src/html/partials/get-gallery/index.html
+++ b/src/html/partials/get-gallery/index.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="center">
+<div class="center center--show-top">
   <div class="center__inner text-center">
 
     <form class="form vertical-center" data-ng-submit="importGallery()">
