--- a/src/html/partials/edit-gallery/index.html
+++ b/src/html/partials/edit-gallery/index.html
@@ -25,7 +25,7 @@
           style="float:left; text-align:center;">
         <img class="edit-thumbs__thumb-img"
              data-ng-src="{{thumbnails[photo.id]}}"
-             data-ng-show="thumbnails[photo.id]"
+             data-ng-if="thumbnails[photo.id]"
              class="thumb__img"
              title="{{photo.name}}"/>
 
