--- a/src/html/partials/home/index.html
+++ b/src/html/partials/home/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="main-menu__item main-menu__item--select" data-ng-click="go('/select-gallery', 'slide-left')">
       <div class="main-menu__item-inner">
-        <h1 class="main-menu__item-title">Show<span class="main-menu__item-subtitle">Galleries</span></h1>
+        <h1 class="main-menu__item-title">Select<span class="main-menu__item-subtitle">a Gallery</span></h1>
         <span class="main-menu__item-logo icon-select"></span>
       </div>
     </div>
