- switched to ngCordova/$ngCordova - lots of updates

--- a/src/config.xml.tmpl
+++ b/src/config.xml.tmpl
@@ -14,4 +14,8 @@
     <preference name="AutoHideSplashScreen" value="false" />
     <preference name="KeyboardDisplayRequiresUserAction" value="false" />
     <preference name="ShowSplashScreenSpinner" value="false" />
+
+    <preference name="iosPersistentFileLocation" value="Library" />
+
+
 </widget>
