--- a/src/css/index.less
+++ b/src/css/index.less
@@ -12,6 +12,9 @@
 @import 'app/pages';
 @import 'app/forms';
 @import 'app/misc';
+@import 'app/details';
+@import 'app/preview';
+@import 'app/bottom-ctrl';
 
 @import 'app/home';
 @import 'app/edit';
