--- a/src/html/partials/create-gallery/index.html
+++ b/src/html/partials/create-gallery/index.html
@@ -8,10 +8,11 @@
 </div>
 
 <div class="center center--show-top">
-  <div class="center__inner text-center">
+  <div class="center-inner">
 
-    <div class="form vertical-center">
-      <p class="form__label">Enter a gallery title</p>
+  <div class="form">
+    <h1>Create a new gallery</h1>
+    <p class="form__label">Enter a gallery title</p>
       <span class="form__text-input-outer">
         <input class="form__text-input"
                type="text"
@@ -19,10 +20,10 @@
                placeholder="YOUR TITLE"/>
       </span>
 
-      <p class="text-right">
-        <button class="btn--white" data-ng-click="createGallery(titleOfNewGallery)">Continue</button>
-      </p>
-    </div>
+    <p class="text-right">
+      <button class="btn--white" data-ng-click="createGallery(titleOfNewGallery)">Continue</button>
+    </p>
+  </div>
 
   </div>
 </div>
