--- a/src/html/partials/edit-gallery/index.html
+++ b/src/html/partials/edit-gallery/index.html
@@ -9,11 +9,7 @@
 </div>
 
 <div class="center center--show-top center--show-bottom">
-  <div class="center__inner text-center">
-    <div class="message2" data-ng-if="showUploadBtn || showUpdateBtn">
-      <button data-ng-if="showUpdateBtn" data-ng-click="onUpdateBtnClick()">Apply changes</button>
-      <button data-ng-if="showUploadBtn" data-ng-click="onUploadBtnClick()">Upload gallery</button>
-    </div>
+  <div class="center-inner">
 
     <h1 class="gallery-title">{{gallery.title}}</h1>
 
@@ -35,25 +31,31 @@
   </div>
 </div>
 
-
 <div class="bottom">
   <div class="bottom__inner">
     <ul class="bottom-ctrl">
       <li class="bottom-ctrl__item">
-        <div class="bottom-ctrl__icon icon-add"></div>
+        <div class="bottom-ctrl__icon icon-add-images"></div>
         <div class="bottom-ctrl__label">Add images</div>
         <div id="controller" data-ng-controller="fileSelectionController">
           <input class="file-input" type="file" id="files" name="files[]" multiple data-file-selection-directive/>
         </div>
       </li>
-      <li class="bottom-ctrl__item" data-ng-click="go('/share-gallery', 'slide-left')">
+      <li class="bottom-ctrl__item" data-ng-click="onShareBtnClick()">
         <div class="bottom-ctrl__icon icon-share"></div>
         <div class="bottom-ctrl__label">Share</div>
       </li>
       <li class="bottom-ctrl__item" data-ng-click="go('/slideshow', 'slide-left')">
-        <div class="bottom-ctrl__icon icon-play"></div>
+        <div class="bottom-ctrl__icon icon-play2"></div>
         <div class="bottom-ctrl__label">Slideshow</div>
       </li>
+
+      <li class="bottom-ctrl__item bottom-ctrl__item--green" data-ng-click="onUpdateBtnClick()">
+        <div class="bottom-ctrl__icon icon-sync2"></div>
+        <div class="bottom-ctrl__label">Apply changes</div>
+      </li>
+      <li>{{showUpdateBtn}}</li>
+
     </ul>
   </div>
 </div>
