--- a/src/html/partials/slideshow/index.html
+++ b/src/html/partials/slideshow/index.html
@@ -1,5 +1,5 @@
 <!-- slideshow view-->
-<div class="top">
+<div class="top top--dark">
   <div class="top__inner">
     <span class="top-icon-back icon-back" data-ng-click="go('/edit-gallery', 'slide-right')"></span>
   </div>
