--- a/src/html/partials/auth/signin.html
+++ b/src/html/partials/auth/signin.html
@@ -10,24 +10,56 @@
 <div class="center center--show-top">
   <div class="center__inner text-center">
 
-    <form class="form" data-ng-submit="signinSubmit()">
+    <form class="form" name="signinForm" data-ng-submit="signinSubmit(signinCredentials.$valid)" novalidate>
       <h1 style="line-height:1em;">Signin,<br>
-      <span class="text-large">to share your photos with others.</span></h1>
+        <span class="text-large">to share your photos with others.</span></h1>
 
-      <span class="form__label">Pic a username</span>
+      <div class="form__group">
+        <span class="form__label">Pic a username</span>
       <span class="form__text-input-outer">
-        <input data-ng-model="username" class="form__text-input" placeholder="magic-mike"/>
+        <input
+            name="username"
+            data-ng-model="signinCredentials.username"
+            data-ng-minlength="8"
+            data-ng-maxlength="30"
+            class="form__text-input"
+            placeholder="magic"
+            required/>
       </span>
+        <span class="form__error-msg" data-ng-show="showSigninFormErrors && signinForm.username.$error.required">A username is required!</span>
+        <span class="form__error-msg" data-ng-show="showSigninFormErrors && signinForm.username.$error.minlength">Username is to short.</span>
+        <span class="form__error-msg" data-ng-show="showSigninFormErrors && signinForm.username.$error.maxlength">Username is to long.</span>
+      </div>
 
-      <span class="form__label">Enter your email</span>
+      <div class="form__group">
+        <span class="form__label">Enter your email</span>
       <span class="form__text-input-outer">
-      <input data-ng-model="email" class="form__text-input" placeholder="mike@somedomain.com"/>
+      <input
+          type="email"
+          name="email"
+          data-ng-model="signinCredentials.email"
+          class="form__text-input"
+          placeholder="mike@somedomain.com"
+          required/>
       </span>
+        <span class="form__error-msg" data-ng-show="showSigninFormErrors && signinForm.email.$error.required">Your email is required!</span>
+        <span class="form__error-msg" data-ng-show="showSigninFormErrors && signinForm.email.$error.email">Not a valid email format!</span>
 
-      <span class="form__label">Choose a password</span>
+      </div>
+
+      <div class="form__group">
+        <span class="form__label">Choose a password</span>
       <span class="form__text-input-outer">
-        <input data-ng-model="password" class="form__text-input" placeholder="a!s,F2l0"/>
+        <input
+            name="password"
+            data-ng-model="signinCredentials.password"
+            class="form__text-input"
+            placeholder="a!s,F2l0"
+            required/>
       </span>
+        <span class="form__error-msg" data-ng-show="showSigninFormErrors && signinForm.email.$error.required">A password is required!</span>
+
+      </div>
 
       <p class="text-right">
         <button class="btn--white" type="submit">Continue</button>
