--- a/src/html/partials/auth/signin.html
+++ b/src/html/partials/auth/signin.html
@@ -10,7 +10,7 @@
 <div class="center center--show-top">
   <div class="center__inner text-center">
 
-    <form class="form" name="signinForm" data-ng-submit="signinSubmit(signinCredentials.$valid)" novalidate>
+    <form class="form" name="signinForm" data-ng-submit="signinSubmit(signinForm.$valid)" novalidate>
       <h1 style="line-height:1em;">Signin,<br>
         <span class="text-large">to share your photos with others.</span></h1>
 
