--- a/src/html/partials/share-gallery/index.html
+++ b/src/html/partials/share-gallery/index.html
@@ -35,6 +35,9 @@
           <p class="details__value">
             {{galleryKeySegments[0]}} - {{galleryKeySegments[1]}} - {{galleryKeySegments[2]}}
           </p>
+
+          <button class="btn--white" data-ng-click="go('invite', 'slide-left')">Send email invitations</button>
+
         </div>
 
         <div class="details__group">
