--- a/src/html/partials/share-gallery/index.html
+++ b/src/html/partials/share-gallery/index.html
@@ -2,7 +2,7 @@
 
 <div class="top">
   <div class="top__inner">
-    <span class="top-icon-back icon-back" data-ng-click="back()"></span>
+    <span class="top-icon-back icon-back" data-ng-click="go('edit-gallery', 'slide-right')"></span>
   </div>
 </div>
 
