--- a/src/html/partials/share-gallery/index.html
+++ b/src/html/partials/share-gallery/index.html
@@ -9,7 +9,7 @@
 <div class="center center--show-top">
   <div class="center__inner text-center">
 
-    <h1>Gallery sharing</h1>
+    <h1>Sharing</h1>
 
     <h2>{{gallery.name}}</h2>
 
