--- a/src/html/partials/slideshow/index.html
+++ b/src/html/partials/slideshow/index.html
@@ -33,7 +33,7 @@
 
 </div>
 
-<div class="bottom bottom--dark">
+<div class="bottom bottom--dark" data-ng-click="onBottomClick()">
   <div class="bottom__inner text-center">
     <ul class="bottom-ctrl bottom-ctrl--center">
       <li class="bottom-ctrl__item">
