--- a/src/config.xml.tmpl
+++ b/src/config.xml.tmpl
@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="com.example.hello" version="1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <name>Your App</name>
+    <name>FamilyPhotoFrame</name>
     <description>
         Your App description.
     </description>
-    <author email="your@email.com" href="http://example.com">
+    <author email="kampe@kondespro.com" href="http://familyphotoframe.com">
         Your name
     </author>
     <access origin="*" />
