--- a/src/html/partials/auth/signin.html
+++ b/src/html/partials/auth/signin.html
@@ -22,6 +22,7 @@
             data-ng-model="signinCredentials.username"
             data-ng-minlength="8"
             data-ng-maxlength="30"
+            data-ng-change="onUsernameChange"
             class="form__text-input"
             placeholder="magic"
             required/>
