--- a/src/html/partials/start/index.html
+++ b/src/html/partials/start/index.html
@@ -1,7 +1,7 @@
 <!--start view-->
 
 <div class="center">
-  <div class="logo-start icon-logo" data-ng-click="go('/home', 'slide-left')"></div>
+  <img class="logo-start" data-ng-click="go('/home', 'slide-left')" src="img/logo_intro.png" />
 </div>
 
 
