enabled deletion of empty galleries

--- a/src/html/partials/edit-gallery/index.html
+++ b/src/html/partials/edit-gallery/index.html
@@ -63,6 +63,10 @@
         <div class="bottom-ctrl__icon icon-del-image"></div>
         <div class="bottom-ctrl__label">Delete selection</div>
       </li>
+      <li class="bottom-ctrl__item" data-ng-if="showDeleteGalleryBtn" data-ng-click="onDeleteGalleryBtnClick()">
+        <div class="bottom-ctrl__icon icon-del-image"></div>
+        <div class="bottom-ctrl__label">Delete gallery</div>
+      </li>
     </ul>
   </div>
 </div>
